// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactListItemMobile should render 1`] = `
<DocumentFragment>
  <div
    class="css-8cvvgy"
  >
    <div
      class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        <div
          class="flex w-0 flex-grow items-center justify-between space-x-3"
        >
          <span
            class="truncate text-lg font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
          >
            Brian
          </span>
          <div
            class="ml-5 flex items-center space-x-3"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="flex text-theme-primary-300 dark:text-theme-secondary-500"
                  type="button"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg>
                      ellipsis-vertical.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
              type="vertical"
            />
          </div>
        </div>
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100"
        css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
      >
        <div
          class="css-16yt50s"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform css-15txs7d"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContactListItemMobile should render addresses 1`] = `
<DocumentFragment>
  <div
    class="css-8cvvgy"
  >
    <div
      class="select-none cursor-pointer md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 md:border-b"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        <div
          class="flex w-0 flex-grow items-center justify-between space-x-3"
        >
          <span
            class="truncate text-lg font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
          >
            Brian
          </span>
          <div
            class="ml-5 flex items-center space-x-3"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="flex text-theme-primary-300 dark:text-theme-secondary-500"
                  type="button"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg>
                      ellipsis-vertical.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
            <div
              class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
              type="vertical"
            />
          </div>
        </div>
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch"
        css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
      >
        <div
          class="css-16yt50s"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform rotate-180 css-15txs7d"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      <div
        class="w-full space-y-3"
        data-testid="ContactListItemMobile__addresses"
      >
        <div
          class="flex h-20 items-center justify-between overflow-hidden"
        >
          <div
            class="flex h-full flex-1 flex-col justify-center overflow-hidden rounded-l-xl px-6 dark:border-2 dark:border-r-0 dark:border-theme-secondary-800 dark:bg-theme-secondary-900 bg-theme-secondary-100"
          >
            <div
              class="mb-2 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              ARK Devnet
            </div>
            <div
              class="flex items-center space-x-3 overflow-hidden"
            >
              <div
                class="shrink-0 css-jxpwdn"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                  data-testid="Address__address"
                >
                  D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                </span>
              </div>
              <button
                class="ring-focus relative focus:outline-none"
                data-ring-focus-margin="-m-1"
                data-testid="clipboard-icon__wrapper"
                type="button"
              >
                <div
                  class="text-theme-primary-300 dark:text-theme-secondary-700"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="flex h-full"
          >
            <button
              class="flex h-full items-center justify-center rounded-r-xl px-3 bg-theme-secondary-200 text-theme-secondary-500 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
              disabled=""
              type="button"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  double-arrow-right.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
